crates/pcbc/tests/snapshots/build__inline_suppress_hierarchical.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Layout warning
   ╭─[ <TEMP_DIR>/test.zen:4:1 ]
 4 │warn("Layout warning", kind="layout.spacing")
   │                      ╰─────────────────────── Layout warning

Suppressed 2 warnings
✓ test.zen (0 components)
