crates/pcbc/tests/snapshots/build__inline_suppress_multiple_patterns.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Should not be suppressed
   ╭─[ <TEMP_DIR>/test.zen:3:1 ]
 3 │warn("Should not be suppressed", kind="layout.spacing")
   │                           ╰──────────────────────────── Should not be suppressed

Suppressed 1 warning
✓ test.zen (0 components)
