crates/pcbc/tests/snapshots/build__inline_suppress_severity.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Warning 2
   ╭─[ <TEMP_DIR>/test.zen:3:1 ]
 3 │warn("Warning 2")
   │        ╰───────── Warning 2

Suppressed 1 error, 1 warning
✓ test.zen (0 components)
