crates/pcbc/tests/snapshots/build__mixed_stable_unstable_refs.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (2 components)
