crates/pcbc/tests/snapshots/build__pin_no_connect_reports_at_net_site.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Pin 'NC' on component 'U1' is marked no_connect but was explicitly connected to Net net 'SIG'; omit it from `pins` and Component() will wire NotConnected() automatically
   ╭─[ <TEMP_DIR>/board.zen:2:7 ]
 2 │sig = Net("SIG")
   │           ╰───── Pin 'NC' on component 'U1' is marked no_connect but was explicitly connected to Net net 'SIG'; omit it from `pins` and Component() will wire NotConnected() automatically

✓ board.zen (1 components)
