crates/pcbc/tests/snapshots/build__previous_line_multiline_statement.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 1 warning
✓ test.zen (0 components)
